<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_app"
        android:name="ke.co.harambeeapps.privacypolicy.ui.home.HomeFragment"
        android:label="@string/menu_app"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_website"
        android:name="ke.co.harambeeapps.privacypolicy.ui.gallery.GalleryFragment"
        android:label="@string/menu_website"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_history"
        android:name="ke.co.harambeeapps.privacypolicy.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="ke.co.harambeeapps.privacypolicy.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="ke.co.harambeeapps.privacypolicy.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="ke.co.harambeeapps.privacypolicy.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>