<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollFeed"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ke.co.harambeeapps.privacypolicy.Details"
    tools:showIn="@layout/activity_main"
    android:background="@color/greywhite"
    android:focusableInTouchMode="true">

    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        style="@style/centreLocatorCardDesign"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtCompanyType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/iorComp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioIorCompany"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:checkedButton="@+id/individualRb"
                android:layout_height="0dp">
                <RadioButton
                    android:text="@string/individual"
                    android:id="@+id/individualRb"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:text="@string/company"
                    android:id="@+id/companyRb"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/is_this_policy_for_an_app_or_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioTypeGroup"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:checkedButton="@+id/appRadioButton"
                android:layout_height="0dp">
                <RadioButton
                    android:text="@string/app"
                    android:id="@+id/appRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:text="@string/websitetype"
                    android:id="@+id/webRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtILicence"
                android:hint="@string/choose_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/choose_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/licences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputName"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/name_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/txtName"
                    android:textColor="@color/grey"
                    style="@style/modifiedEditText"
                    android:hint="@string/name"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputWebsite"
                android:hint="@string/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/txtWebsite"
                    style="@style/modifiedEditText"
                    android:ems="10"
                    android:textColor="@color/grey"
                    android:hint="@string/website"
                    android:inputType="text" />


            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnGenerate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/centre_button"
                android:text="@string/generate"
                android:textColor="@color/whiteTextColor" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
